src/styles/partials/_typography.scss
/******************************************************************
Site Name: 
Author: 

Stylesheet: Typography

******************************************************************/

/*
"Web design is 95% typography" â€” Oliver Reichenstein

When that quote was made in 2006 it was before web fonts, auto-play video,
and animated pop-ups so even if it is 65 or 75% today that is still *most* 
of any web site's design. Understanding some of the basics of typography
(and web typography) will go a long way.

There are lots of web typographic systems out there however many are
overly complex and not intuitive. Thus, we've tried to set some good
defaults that aren't based on confounding mixins here but you may want
to explore web typography further:

https://www.smashingmagazine.com/2009/08/typographic-design-survey-best-practices-from-the-best-blogs/
https://www.smashingmagazine.com/2012/12/css-baseline-the-good-the-bad-and-the-ugly/
http://www.newnet-soft.com/blog/csstypography
http://typecast.com/blog/4-simple-steps-to-vertical-rhythm
https://github.com/StudioThick/megatype
https://sassline.com
http://matejlatin.github.io/Gutenberg/
https://zellwk.com/blog/responsive-typography/
https://github.com/zellwk/typi

Note that most of the typography styles are set in base.scss with
the html, body, and h1â€“h6 tags so adjust as needed. Set a good baseline
and consider your vertical rhythm.

*/

/*********************
FONT FACE (IN YOUR FACE)
*********************/

/* To embed your own fonts, use this syntax
  and place your fonts inside the
  library/fonts folder. For more information
  on embedding fonts, go to:
  http://www.fontsquirrel.com/
  Be sure to remove the comment brackets.
  
  Also, you don't have to include a separate name for 
  each font style...just use the same name and
  declare each style separately. See here:
  http://www.newnet-soft.com/blog/csstypography
*/

/*  @font-face {
      font-family: 'Font Name';
      src: url('library/fonts/font-name.eot');
      src: url('library/fonts/font-name.eot?#iefix') format('embedded-opentype'),
             url('library/fonts/font-name.woff') format('woff'),
             url('library/fonts/font-name.ttf') format('truetype'),
             url('library/fonts/font-name.svg#font-name') format('svg');
      font-weight: normal;
      font-style: normal;
  }
*/


/*********************
FONT STACKS
*********************/

// Let's use OS system fonts and let the system do the work. We've included all the major desktop and mobile OS's.
// See here: https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/. 

$sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;

$rubik: 'Rubik', $sans;

$serif: "Merriweather", "Georgia", Cambria, Times New Roman, Times, serif;

/*
 Commented out since WP uses system fonts now but if you can't let go I won't be upset. 
*/
// $open: 'Open Sans', $sans-serif;

/*
some nice typographical defaults
more here: http://www.newnet-soft.com/blog/csstypography
*/
p {
  -ms-word-wrap: break-word;
  word-wrap: break-word;
  word-break: break-word; //non-standart css for webkit
  // I don't like hyphens for web text so uncomment the next section if you do
  -webkit-hyphens: none;
     -moz-hyphens: none;
          hyphens: none;
  // -webkit-hyphens: auto;
  //   -moz-hyphens: auto;
  //        hyphens: auto;
  // sets a minimum number of characters before and after the break
  -webkit-hyphenate-before: 2;
   -webkit-hyphenate-after: 3;
           hyphenate-lines: 3;
  // enabling fancy ligatures when available
  -webkit-font-feature-settings: "liga", "dlig";
   -moz-font-feature-settings: "liga=1, dlig=1";
      -ms-font-feature-settings: "liga", "dlig";
       -o-font-feature-settings: "liga", "dlig";
          font-feature-settings: "liga", "dlig";
}

